// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimplifiedProductInfo component it should render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#FFFFFF",
        "borderWidth": 2,
        "marginBottom": 16,
        "marginHorizontal": 8,
        "padding": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    <Image
      source={undefined}
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          size="large"
          weight="bold"
        >
          Safavieh
           
          FOX8508
        </Text>
      </View>
      <Text>
        Color/Finish: 
        Black
      </Text>
    </View>
  </View>
</View>
`;

exports[`SimplifiedProductInfo component it should render a headerRowAction 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#FFFFFF",
        "borderWidth": 2,
        "marginBottom": 16,
        "marginHorizontal": 8,
        "padding": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    <Image
      source={undefined}
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          size="large"
          weight="bold"
        >
          Safavieh
           
          FOX8508
        </Text>
        <Test />
      </View>
      <Text>
        Color/Finish: 
        Black
      </Text>
    </View>
  </View>
</View>
`;

exports[`SimplifiedProductInfo component it should render a quantity 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#FFFFFF",
        "borderWidth": 2,
        "marginBottom": 16,
        "marginHorizontal": 8,
        "padding": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    <Image
      source={undefined}
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 8,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          size="large"
          weight="bold"
        >
          Safavieh
           
          FOX8508
        </Text>
      </View>
      <Text>
        Color/Finish: 
        Black
      </Text>
      <Text>
        Quantity: 
        1
      </Text>
    </View>
  </View>
</View>
`;
